--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -23,6 +23,8 @@
     justify-content: center;
     align-items: center;
     transition: transform .23s;
+    /* ????hamburger menu???? */
+    /* position: relative; */
 }
 .spot-card:hover{
     transform: translateY(-.23rem);
