--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,22 +1,29 @@
+.nav-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 11rem;
+    padding: 0;
+    margin: 0;
+}
 .logo{
     font-size: 2rem;
     font-weight: bolder;
 }
-#profile{
+.create-spot-with-menu{
+    position: absolute;
+    right: 13rem;
+}
+.profile{
     margin: 0;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: space-between;
     align-items: center;
     transition: transform .23s;
 }
-#profile:hover{
-    transform: translateY(-1rem);
-}
-.profile-menu{
-    border: none;
-}
-#profile-bruh{
+#user-section   {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -25,55 +32,19 @@
     position: absolute;
     z-index: 1;
     top:0;
+    right: 1px;
     border: 1px solid red;
-    width:  11rem;
+    width: 11rem;
     padding: 0;
+}
+.profile-menu{
+    border: none;
 }
 .profile-menu > *{
     color: var(--grey);
 }
 .hidden{
     display: none;
-}
-.nav-bar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-}
-.nav-bar-conditional-content{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 1rem;
-    margin: 1rem;
-    margin-bottom: 3rem;
-    transition: transform .23s;
-}
-.nav-bar-conditional-content:hover{
-    transform: scale(1.1);
-    filter: saturate(3);
-}
-.nav-bar-conditional-content > *{
-    padding: 1rem;
-}
-.nav-bar-conditional-content{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* width: 25%; */
-}
-.nav-bar-conditional-content > *{
-    border-radius: 1rem;
-    margin: 1rem;
-    padding: 1.3rem .7rem;
-    transition: transform .23s ease-in-out;
-}
-.nav-bar-conditional-content > *:hover{
-    filter: saturate(1.1);
-    transform: scale(1.001);
 }
 .nav-item {
     display: flex;
@@ -124,7 +95,6 @@ i {
 }
 #logo:hover {
     filter: saturate(3);
-    transform: translateY(-.23rem);
 }
 #logo:hover .fa-yin-yang{
     transform: scale(1.1);
@@ -140,7 +110,6 @@ i {
     transition: transform .23s;
 }
 .fa-yin-yang:hover{
-    transform: translateY(-4rem);
     filter: saturate(2);
 }
 .fas.fa-user-circle{
@@ -183,14 +152,11 @@ i {
     }
 }
 @media screen and (max-width: 768px){
-    #profile-bruh{
+    #user-section{
         display: flex;
         flex-direction: column;
     }
     .nav-bar{
         display: none;
-    }
-    #profile-bruh{
-        border: none;
     }
 }
