--- a/frontend/src/components/Navigation/MobileMenu.css
+++ b/frontend/src/components/Navigation/MobileMenu.css
@@ -9,10 +9,9 @@
     box-shadow: -0.1rem -.1rem .1rem var(--green),-0.11rem -.11rem .1rem var(--red),-0.3rem -.3rem .3rem var(--grey),0.1rem .1rem .1rem var(--grey),0.1rem .1rem .2rem var(--green),0.1rem .1rem .1rem var(--red),.23rem .23rem .1rem var(--blue);
 }
 .profile-dropdown-mobile{
-    color: var(--grey);
+    color: var(--red);
 }
 .profile-dropdown-mobile{
-    position: absolute;
     z-index: 1;
     top:0;
     right: 1px;
