--- a/frontend/src/components/Navigation/MobileMenu.css
+++ b/frontend/src/components/Navigation/MobileMenu.css
@@ -30,5 +30,6 @@
         /* border: .21rem solid var(--red); */
         border-radius: 23%;
         width: 55vh;
+        height: 30rem;
     }
 }
