--- a/frontend/src/components/Navigation/MobileMenu.css
+++ b/frontend/src/components/Navigation/MobileMenu.css
@@ -11,6 +11,10 @@
 .profile-dropdown-mobile{
     color: var(--red);
 }
+.mobile{
+    display: block;
+    border: 1px solid green;
+}
 .user-info-mobile{
     border: 1px solid red;
 }
@@ -43,7 +47,7 @@
 @media screen and (max-width: 768px){
     .mobile-menu{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         justify-content: center;
         height: fit-content;
