--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -20,6 +20,7 @@
 }
 .spot-card{
     display: flex;
+    height: 100%;
     justify-content: center;
     align-items: center;
     transition: transform .23s;
