--- a/frontend/src/components/Navigation/MobileMenu.css
+++ b/frontend/src/components/Navigation/MobileMenu.css
@@ -6,6 +6,7 @@
 }
 #logo-mobile{
     border: 1px solid red;
+    margin: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,16 +21,9 @@
 @media screen and (max-width: 768px){
     .mobile-menu{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         justify-content: center;
         height: fit-content;
-    }
-    .mobile-menu{
-        box-shadow: -0.1rem -.1rem .1rem var(--green),-0.11rem -.11rem .1rem var(--red),-0.3rem -.3rem .3rem var(--grey),0.1rem .1rem .1rem var(--grey),0.1rem .1rem .2rem var(--green),0.1rem .1rem .1rem var(--red),.23rem .23rem .1rem var(--blue);
-        /* border: .21rem solid var(--red); */
-        border-radius: 23%;
-        width: 55vh;
-        height: 30rem;
     }
 }
