--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -19,6 +19,11 @@
     border: 1px solid red;
     padding: 0;
 }
+.conditional-content{
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+}
 .profile-menu > *{
     color: var(--grey);
 }
