--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,4 +1,7 @@
-
+.logo{
+    font-size: 2rem;
+    font-weight: bolder;
+}
 #profile{
     display: flex;
     flex-direction: column;
@@ -9,7 +12,6 @@
     position: relative;
     border: none;
     margin: 10px;
-    background-color: white;
 }
 #profile-bruh{
     display: flex;
