--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -86,12 +86,16 @@ form{
     /* border: .1rem solid var(--red) */
 }
 #button{
-    /* border: 1px solid var(--grey); */
+    border: 1px solid var(--grey);
     color: var(--red);
     font-size: 1rem;
     height: fit-content;
-    /* border-radius: 1rem; */
+    border-radius: 1rem;
     padding: .77rem;
     margin-bottom: 1rem;
     width: 70%;
+}
+#button:hover{
+    box-shadow: 1px 1px 1px var(--grey);
+    background-color: rgba(255, 56, 93, 0.027);
 }
