--- a/frontend/src/components/ManageSpots/ManageSpots.css
+++ b/frontend/src/components/ManageSpots/ManageSpots.css
@@ -8,9 +8,6 @@
  flex-direction: column;
  align-items: center;
 }
-.manage-buttons > button{
- width: 10rem
-}
 .manage-wrapper > *{
  display: flex;
  flex-direction: column;
@@ -19,5 +16,12 @@
  width: 100%;
 }
 .manage-container{
-    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.spot-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
