--- a/frontend/src/components/ManageSpots/ManageSpots.css
+++ b/frontend/src/components/ManageSpots/ManageSpots.css
@@ -8,6 +8,9 @@
  flex-direction: column;
  align-items: center;
 }
+.manage-buttons > button{
+ width: 10rem
+}
 .manage-wrapper > *{
  display: flex;
  flex-direction: column;
