--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -165,18 +165,15 @@
     }
 }
 @media screen and (max-width: 768px){
-    body{
-        max-width: 400px;
-    }
     #root{
-        max-width: 400px;
+        max-width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
     }
     .spot-details{
-        max-width: 400px;
+        max-width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
