--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -44,4 +44,6 @@
   color: rgba(0, 0, 0, 0.733);
   position: absolute;
   background-color:rgb(255, 255, 255);
+  border: .3rem solid var(--blue);
+  border-radius: 1rem;
 }
