--- a/frontend/src/components/SpotCardImage/SpotCardImage.css
+++ b/frontend/src/components/SpotCardImage/SpotCardImage.css
@@ -2,11 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1rem;
+    /* padding: 1rem; */
     width: 18rem;
 }
 img{
-    border-radius: 1rem;
+    border-radius: 10px;
     display: block;
     width: 100%;
     height: 100%;
