--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -45,6 +45,7 @@
     border-radius: 1rem;
     border: 0.1rem solid var(--blue);
     box-shadow: 0 .2rem .2rem var(--grey);
+    padding: 1.5rem 1rem;
 }
 .nav-link:hover{
     filter:brightness(100.1%);
