bookings css, minor general css updates

--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -20,6 +20,7 @@
   border-radius: 0.2em;
 }
 .user-information-create-spot{
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
