--- a/frontend/src/components/SpotCardImage/SpotCardImage.css
+++ b/frontend/src/components/SpotCardImage/SpotCardImage.css
@@ -5,7 +5,14 @@
     /* padding: 1rem; */
     width: 18rem;
 }
-img{
+.image-container > img{
+    border-radius: 10px;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.large-spot-card-image > img{
     border-radius: 10px;
     display: block;
     width: 100%;
