--- a/frontend/src/components/SpotCardImage/SpotCardImage.css
+++ b/frontend/src/components/SpotCardImage/SpotCardImage.css
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* padding: 1rem; */
-    width: 18rem;
+    width: 20rem;
+    height: 13rem;
 }
 .image-container > img{
     border-radius: 10px;
@@ -18,9 +18,4 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-@media screen and (max-width: 720px){
-    .image-container{
-        width: 11rem;
-    }
 }
