--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -12,15 +12,12 @@
 }
 .spot-cards-section{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    row-gap: 3rem;
-    column-gap: 3rem;
-    align-items: center;
-    justify-content: center;
+    grid-template-columns:repeat(4,1fr);
+    place-items:center;
+    gap: 2rem;
 }
 .spot-card{
     display: flex;
-    height: 100%;
     justify-content: center;
     align-items: center;
     transition: transform .23s;
@@ -37,15 +34,13 @@
     visibility: visible;
 }
 .nav-link{
-    height: 105%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     border-radius: 1rem;
     border: 0.1rem solid var(--blue);
     box-shadow: 0 .2rem .2rem var(--grey);
     padding: 1.5rem 1.5rem;
+    /* width: 100%; */
 }
 .nav-link:hover{
     filter:brightness(100.1%);
@@ -56,7 +51,7 @@
     filter:brightness(105%);
 }
 .nav-link-info{
-    width: 90%;
+    width: 100%;
 }
 #card-stars{
     display: flex;
@@ -90,6 +85,7 @@
     .spot-cards-section{
         display: grid;
         grid-template-columns: repeat(3,1fr);
+        place-items: center;
     }
     .spot-details-images-support-cards{
         display: flex;
@@ -100,6 +96,7 @@
     .spot-cards-section{
         display: grid;
         grid-template-columns: repeat(2,1fr);
+        place-items: center;
     }
 }
 @media screen and (max-width: 768px){
@@ -109,6 +106,9 @@
         align-items: center;
         justify-content: center;
     }
+    /* .nav-link{
+        width: 100%;
+    } */
 }
 @media screen and (max-width: 425px){
     .spot-cards-section{
