--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -19,7 +19,7 @@
 }
 .profile-dropdown{
     position: absolute;
-    top: 7rem;
+    top: 4rem;
     background-color: var(--green);
     border: 1px solid var(--blue);
     border-radius: 1rem;
@@ -60,12 +60,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 1rem;
-    margin: 1rem;
-    margin-bottom: 3rem;
     transition: transform .23s;
-}
-.nav-bar-conditional-content > *{
-    padding: 1rem;
 }
 .nav-bar-conditional-content{
     display: flex;
@@ -74,8 +69,6 @@
 }
 .nav-bar-conditional-content > *{
     border-radius: 1rem;
-    margin: 1rem;
-    padding: 1.3rem .7rem;
     transition: transform .23s ease-in-out;
 }
 #profile {
@@ -132,7 +125,7 @@ i {
 .fa-yin-yang{
     height: 1rem;
     width: 1rem;
-    margin: 1rem;
+    margin-right: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -174,7 +167,7 @@ i {
         align-items: center;
     }
 }
-@media screen and (max-width: 768px){
+/* @media screen and (max-width: 768px){
     #profile-bruh{
         display: flex;
         flex-direction: column;
@@ -185,4 +178,4 @@ i {
     #profile-bruh{
         border: none;
     }
-}
+} */
