--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -15,6 +15,7 @@
     grid-template-columns:repeat(4,1fr);
     place-items:center;
     gap: 2rem;
+    width: 90vw;
 }
 .spot-card{
     display: flex;
